improved dockerfiles and documentation

--- a/README
+++ b/README
@@ -5,16 +5,18 @@ Run with:
 $ docker-compose start data db sonarqube
 
 Run `plugins` to install plugins:
-$ docker-compose start plugins
+$ docker-compose start data plugins
 
 Restart `sonar` to have it pick up the plugins
-$ docker-compose restart sonar
+$ docker-compose stop
+$ docker-compose start data db sonarqube
 
 SonarQube should now be available at port :9000 on your Docker host.
 
 Run this to inspect the data volumes
 $ docker run --rm -v /usr/local/bin/docker:/docker -v /var/run/docker.sock:/docker.sock svendowideit/samba sonardocker_data_1
-
+or
+$ docker-compose run sonarqube bash
 
 Extra
 =====
